use of HttpClient class