@@ -12,7 +12,13 @@ import pl.szymanski.githubInformationFinder.Repository.RepoRepository;
 
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.io.Reader;
+import java.net.URI;
 import java.net.URL;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.time.Duration;
 
 @RestController
 @RequestMapping("/repository")
@@ -26,33 +32,56 @@ public class RepositoryService {
         this.ownerRepository = ownerRepo;
     }
 
-    @GetMapping(headers = "Accept=application/json")
-    public JSONObject getByName(@RequestParam String name) {
-        try{
-            URL urlUser = new URL("https://api.github.com/users/blabererelabla");
-            InputStreamReader readUserData = new InputStreamReader(urlUser.openStream());
-            Owner user = new Gson().fromJson(readUserData, Owner.class);
+//    @GetMapping(headers = "Accept=application/json")
+//    public JSONObject getByName(@RequestParam String name) {
+//        try{
+//            URL urlUser = new URL("https://api.github.com/users/blabererelabla");
+//            InputStreamReader readUserData = new InputStreamReader(urlUser.openStream());
+//            Owner user = new Gson().fromJson(readUserData, Owner.class);
 //            response.put()
-        } catch (IOException e) {
-            response.put("status","404");
-            response.put("Message", " not found");
-            System.out.println(response);
-        }
-
-        return response;
-    }
+//        } catch (IOException e) {
+//            response.put("status","404");
+//            response.put("Message", " not found");
+//            System.out.println(response);
+//        }
+//
+//        return response;
+//    }
 
     public static void main(String[] args) {
+        HttpClient client = HttpClient.newBuilder().connectTimeout(Duration.ofSeconds(10)).build();
+        HttpResponse<String> response = null;
         try{
-            URL urlUser = new URL("https://api.github.com/users/blabererelabla");
-            InputStreamReader readUserData = new InputStreamReader(urlUser.openStream());
-            Owner user = new Gson().fromJson(readUserData, Owner.class);
+            String endPoint = "https://api.github.com/users/szymafgbfgbbfgbnskijk";
+            URI uri = URI.create(endPoint);
+            HttpRequest request = HttpRequest.newBuilder().uri(uri).build();
+            response = client.send(request, HttpResponse.BodyHandlers.ofString());
+            String jsonResponse = response.body();
+            if (response.statusCode()==404) {
+                Owner user = new Gson().fromJson(jsonResponse, Owner.class);
+            }
             System.out.println(user.getLogin());
-        } catch (IOException e) {
-            JSONObject response = new JSONObject();
-            response.put("status","404");
-            response.put("Message", " not found");
-            System.out.println(response);
+        }catch (Exception e){
+            System.out.println(response.statusCode());
+            System.out.println(response.body().toString());
+            e.printStackTrace();
         }
+
+
+
+
+
+
+//        try{
+//            URL urlUser = new URL("https://api.github.com/users/blabererelabla");
+//            InputStreamReader readUserData = new InputStreamReader(urlUser.openStream());
+//            Owner user = new Gson().fromJson(readUserData, Owner.class);
+//            System.out.println(user.getLogin());
+//        } catch (IOException e) {
+//            JSONObject response = new JSONObject();
+//            response.put("status","404");
+//            response.put("Message", " not found");
+//            System.out.println(response);
+//        }
     }
 }
